--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 -<!DOCTYPE html>
 <html>
 <head>
-  <title> 谷 哥 网 </title>
+  <title> Klopity Proxy </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- header font -->
   <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet" type="text/css">
@@ -70,8 +70,8 @@
       <form action="no-js" method="get" id="unblocker-form">
         <center><p>
         <br/>
-          <input type="text" id="url" name="url" autofocus="autofocus" value="http://www.facebook.com"/>
-          <input type="submit" value="Go"/>
+          <input type="text" id="url" name="url" autofocus="autofocus" value="example.com"/>
+          <input type="submit" value="Google"/>
 	<br/><h1><center><a href="./u/http://www.google.com"> Click to Go </a></center></h1>
         </p></center>
       </form>
