--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,8 @@
         <center><p>
         <br/>
           <input type="text" id="url" name="url" autofocus="autofocus" value="example.com"/>
-          <input type="submit" value="Google"/>
-	<br/><h1><center><a href="./u/http://www.google.com"> Click to Go </a></center></h1>
+          <input type="submit" value="Go"/>
+	<br/><h1><center><a href="./u/http://www.google.com"> Click for Google </a></center></h1>
         </p></center>
       </form>
 
